--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "chatapp",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -7,22 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.7.1",
-    "@emotion/react": "^11.7.1",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.6.0",
-    "@fontsource/roboto": "^4.5.1",
-    "@mui/icons-material": "^5.2.4",
-    "@mui/material": "^5.2.4",
-    "next": "^12.0.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.3.1",
+    "@mui/styles": "^5.3.0",
+    "@types/styled-components": "^5.1.21",
+    "email-validator": "^2.0.4",
+    "firebase": "^9.6.4",
+    "moment": "^2.29.1",
+    "next": "12.0.8",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.0",
+    "styled-components": "^5.3.3",
+    "timeago-react": "^3.0.4"
   },
   "devDependencies": {
-    "@types/node": "^17.0.1",
-    "@types/react": "^17.0.37",
-    "eslint": "^8.5.0",
-    "eslint-config-next": "^12.0.7",
-    "typescript": "^4.5.4"
+    "@types/node": "17.0.10",
+    "@types/react": "17.0.38",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "typescript": "4.5.5"
   }
 }
