--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "chatapp",
+  "name": "whatsapp-clone-nextjs",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,26 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
-    "@mui/material": "^5.3.1",
-    "@mui/styles": "^5.3.0",
-    "@types/styled-components": "^5.1.21",
+    "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
-    "firebase": "^9.6.4",
+    "emoji-mart": "^3.0.1",
+    "fibers": "5.0.1",
+    "firebase": "^8.7.1",
     "moment": "^2.29.1",
-    "next": "12.0.8",
+    "next": "12.1.0",
+    "node-sass": "7.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-firebase-hooks": "^5.0.0",
-    "styled-components": "^5.3.3",
-    "timeago-react": "^3.0.4"
+    "react-firebase-hooks": "^3.0.4",
+    "saas": "^1.0.0",
+    "sass": "1.49.4",
+    "styled-components": "^5.3.0",
+    "timeago-react": "^3.0.3",
+    "uifx": "^2.0.7"
   },
   "devDependencies": {
-    "@types/node": "17.0.10",
-    "@types/react": "17.0.38",
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.8",
-    "typescript": "4.5.5"
+    "eslint": "7.30.0",
+    "eslint-config-next": "11.0.1",
+    "typescript": "4.3.5"
   }
 }
